fixed terraform workflow issue

--- a/.github/workflows/terraform-dev.yaml
+++ b/.github/workflows/terraform-dev.yaml
@@ -33,6 +33,7 @@ jobs:
 # ctrl + [ ---> towards left
 # ctrl + ] ---> towards right
   terraform-dev:
+    needs: [terraform-fmt]
     runs-on: ubuntu-latest
     steps:
     - name: checkout
