--- a/.github/workflows/class12-terraform-dev.yaml
+++ b/.github/workflows/class12-terraform-dev.yaml
@@ -1,8 +1,10 @@
-name: terraform-dev-class12
+name: terraform dev class12
 on:
-  pull_request:
-    branches:
-      - main
+  # pull_request:
+  #   branches:
+  #     - main
+
+  workflow_dispatch:
 
 
 env:
