--- a/.github/workflows/on-pr-terraform.yaml
+++ b/.github/workflows/on-pr-terraform.yaml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'class10/Terraform-advanced/**'
+      - '.github/workflows/on-pr-terraform.yaml'
 
 
 
