--- a/.github/workflows/class12-build-deploy.yaml
+++ b/.github/workflows/class12-build-deploy.yaml
@@ -17,13 +17,14 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: checkout code
         uses: actions/checkout@v4
 
-  deploy:
-    needs: [build]
-    runs-on: ubuntu-latest
+  #deploy:
+  #  needs: [build]
+  #  runs-on: ubuntu-latest
 
     steps:
        - name: Configure AWS Credentials
