--- a/.github/workflows/on-pr-terraform.yaml
+++ b/.github/workflows/on-pr-terraform.yaml
@@ -33,10 +33,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
+     
+
       - name: Terraform Init
-        run: |
-          cd ${{env.infra_path}}
-          terraform init -backend-config=vars/dev.tfbackend -input=false
+        working-directory: ${{ env.infra_path }}
+        run: terraform init -backend-config=vars/dev.tfbackend -input=false
+        timeout-minutes: 5
 
       - name: Terraform fmt
         run: |
