--- a/.github/workflows/on-pr-terraform.yaml
+++ b/.github/workflows/on-pr-terraform.yaml
@@ -1,42 +1,62 @@
 name: on pr terraform
+
 on:
   pull_request:
     branches:
       - main
-
-
+    paths:
+      - 'class10/Terraform-advanced/**'
+  push:
+    branches:
+      - class12-fresh
 
 env:
   terraform_version: 1.13.3
   infra_path: class10/Terraform-advanced
-  # infra_path: class8
 
 jobs: 
-  terraform-fmt:
+  terraform-check:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    defaults:
+      run:
+        working-directory: ${{ env.infra_path }}
+        
     steps:
-      - name: checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Terraform install
+        
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-            terraform_version: ${{ env.terraform_version }}
-
+          terraform_version: ${{ env.terraform_version }}
+            
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v5
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-
-      - name: Terraform fmt
+        timeout-minutes: 2
+          
+      - name: Terraform Init
         run: |
-          cd ${{env.infra_path}} 
-          terraform fmt -check
-
-      - name: Terraform plan
-        run: |
-          cd ${{env.infra_path}} 
-          terraform plan -var-file=vars/dev.tfvars
-
+          terraform init -input=false \
+            -backend-config="bucket=state-bucket-216989097838" \
+            -backend-config="key=AugustBootie/dev/terraform.tfstate" \
+            -backend-config="region=us-east-1" \
+            -backend-config="encrypt=true"
+        timeout-minutes: 5
+          
+      - name: Terraform Format Check
+        run: terraform fmt -check
+        timeout-minutes: 2
+        continue-on-error: true
+          
+      - name: Terraform Validate
+        run: terraform validate
+        timeout-minutes: 2
+          
+      - name: Terraform Plan
+        run: terraform plan -var-file=vars/dev.tfvars -input=false
+        timeout-minutes: 10
