--- a/.github/workflows/class12-build-deploy.yaml
+++ b/.github/workflows/class12-build-deploy.yaml
@@ -1,24 +1,27 @@
 name: class12 ecs deploy
 
 on:
-  push:
-    branches:
-      - main
-      - class12-fresh
+  # push:
+  #   branches:
+  #     - main
+  #     #- class12-fresh
 
-  #workflow_dispatch:
+  workflow_dispatch:
 
 env:
-  ecr_repo: " "
-  ecs_task_def: " "
-  ecs_cluster: " "
-  ecs_service: " "
+  ecr_repo: "216989097838.dkr.ecr.us-east-1.amazonaws.com/student-portal-main-repo"
+  ecs_task_def: "dev-studentportal-task-def"
+  ecs_cluster: "dev-studentportal-cluster"
+  ecs_service: "dev-studentportal-service"
+  app_container: "studentportal"
+  aws_account_id: "216989097838"
+  aws_region: "us-east-1"
+  image_tag: ${{ github.sha }}
 
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: checkout code
         uses: actions/checkout@v4
@@ -32,13 +35,16 @@ jobs:
 
     
       - name: ecr login
-        run: echo login
+        run: aws ecr get-login-password --region ${{ env.aws_region }} | docker login --username AWS --password-stdin ${{ env.aws_account_id }}.dkr.ecr.${{ env.aws_region }}.amazonaws.com
 
       - name: docker build
-        run: echo build
+        run: |
+          cd class6
+          docker build -t ecsapp .
+          docker tag ecsapp ${{ env.ecr_repo }}:${{ env.image_tag }}
 
       - name: docker push
-        run: echo push
+        run: docker push ${{ env.ecr_repo }}:${{ env.image_tag }}
 
 
   deploy:
@@ -53,5 +59,25 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-       - name: update the new image in task def
-         run: echo the new image in task def
+       - name: Download task definition for web
+         run: |
+          aws ecs describe-task-definition --task-definition ${{ env.ecs_task_def }} \
+          --query taskDefinition > task-definition.json
+          ls -l task-definition.json
+          
+       - name: Fill in the new image ID for web in the ECS task def
+         id: task-def-web
+         uses: aws-actions/amazon-ecs-render-task-definition@v1
+         with:
+          task-definition: task-definition.json
+          container-name: ${{ env.app_container }}
+          image: ${{ env.ecr_repo }}:${{ env.image_tag }}
+
+       - name: Deploy app on Amazon ECS task definition
+         if: ${{ github.ref == 'refs/heads/main' }}
+         uses: aws-actions/amazon-ecs-deploy-task-definition@v2
+         with:
+          task-definition: ${{ steps.task-def-web.outputs.task-definition }}
+          service: ${{ env.ecs_service }}
+          cluster: ${{ env.ecs_cluster }}
+          wait-for-service-stability: true
