--- a/.github/workflows/terraform-destroy.yaml
+++ b/.github/workflows/terraform-destroy.yaml
@@ -5,7 +5,7 @@ on:
 
 env:
   terraform_version: 1.5.7 
-  infra_path: class10
+  infra_path: class10/Terraform-advanced
 
 jobs:
   terraform-dev:
@@ -27,13 +27,11 @@ jobs:
           aws-region: ap-south-1
 
       - name: Terraform init
-        # run: terraform init
-        run: |
-          cd ${{ env.infra_path }}
-          terraform init -backend-config=vars/dev.tfbackend
+        working-directory: ${{ env.infra_path }}
+        run: terraform init -backend-config=vars/dev.tfbackend
+        timeout-minutes: 5
 
       - name: Terraform Apply
-        # run: terraform plan
-        run: |
-          cd ${{ env.infra_path }}
-          terraform destroy -var-file=vars/dev.tfvars --auto-approve
+        working-directory: ${{ env.infra_path }}
+        run: terraform destroy -var-file=vars/dev.tfvars --auto-approve
+        timeout-minutes: 20
